Box contrast correction and redondant link removal

--- a/style.css
+++ b/style.css
@@ -737,7 +737,7 @@ q {
 }
 
 .black-background {
-  background-color: rgba(165, 147, 99, 0.7);
+  background-color: rgba(75, 66, 43, 0.85);
   padding: 40px 40px 40px 40px;
 }
 
